# claude-orchestrator

./: .env-client.example  .env-server.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
client/: Cargo.toml  install.sh
client/src/: connection.rs  history_importer.rs  main.rs  protocol.rs  session_runner.rs  tray.rs
client/src/vm/: cleanup.rs  config.rs  firecracker.rs  mod.rs  network.rs  rootfs.rs  volume.rs
config/: orchestrator.example.toml
crates/backend-discord/: Cargo.toml
crates/backend-discord/src/: backend.rs  commands.rs  formatting.rs  lib.rs
crates/backend-stdio/: Cargo.toml
crates/backend-stdio/src/: lib.rs
crates/backend-telegram/: Cargo.toml
crates/backend-telegram/src/: ask_question.rs  backend.rs  events.rs  files.rs  formatting.rs  help.rs  lib.rs  mcp.rs  reactions.rs  streaming.rs  topics.rs  voice.rs
crates/backend-traits/: Cargo.toml
crates/backend-traits/src/: lib.rs
crates/backend-web/: Cargo.toml
crates/backend-web/src/: api.rs  backend.rs  lib.rs  ws.rs
crates/claude-generate-config/: Cargo.toml
crates/claude-generate-config/src/: main.rs
crates/client/: Cargo.toml  claude-client.service  install.sh
crates/client/assets/: claude-icon-16.rgba  claude-icon-32.rgba
crates/client/src/: connection.rs  helper.rs  history_importer.rs  main.rs  protocol.rs  session_runner.rs  tray.rs
crates/client/src/runner/: mod.rs  native.rs
crates/client/src/vm/: config.rs  mod.rs  rootfs.rs
crates/containers/: Cargo.toml
crates/containers/src/: auth.rs  config.rs  handle.rs  lib.rs  manager.rs  profiles.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql
crates/db/src/: legacy.rs  lib.rs  migrate.rs
crates/events/: Cargo.toml
crates/events/src/: backend_events.rs  bus.rs  commands.rs  lib.rs  orchestrator_events.rs  types.rs
crates/helper/: Cargo.toml
crates/helper/src/: main.rs
crates/ndjson/: Cargo.toml
crates/ndjson/src/: coalescer.rs  lib.rs  transport.rs  types.rs  usage.rs
crates/orchestrator-llm/: Cargo.toml
crates/orchestrator-llm/src/: interpreter.rs  lib.rs  summariser.rs  types.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: client_registry.rs  client_ws.rs  commands.rs  config.rs  idle_watchdog.rs  internal_api.rs  main.rs  mcp.rs  mcp_oauth.rs  mcp_registry.rs  orchestrator.rs  persistence.rs  task_manager.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/vm-agent/: Cargo.toml
dashboard/: .prettierrc  build.mjs  dev.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/e2e/: dashboard.spec.ts
dashboard/server/: tsconfig.json
dashboard/server/src/: context.ts  index.ts  trpc.ts
dashboard/server/src/__tests__/: toml-manager.test.ts
dashboard/server/src/lib/: mcp-registry.ts  orchestrator.ts  toml-manager.ts
dashboard/server/src/routers/: config.ts  index.ts  mcp.ts  metrics.ts  scheduler.ts  tasks.ts
dashboard/src/: App.tsx  global.d.ts  index.css  main.tsx  router.tsx  server-types.ts  types.ts  vite-env.d.ts
dashboard/src/__tests__/: config.test.tsx  ui.test.tsx  utils.test.ts
dashboard/src/api/: client.ts  trpc.ts
dashboard/src/components/: CommandPalette.tsx  LoginPage.tsx
dashboard/src/components/config/: ConfigPage.tsx  EnvBadge.tsx
dashboard/src/components/config/sections/: DisplaySection.tsx  DockerSection.tsx  ServerSection.tsx  TelegramSection.tsx  WebSection.tsx
dashboard/src/components/dashboard/: DashboardPage.tsx
dashboard/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
dashboard/src/components/mcp/: AddMcpDialog.tsx  McpPage.tsx  McpServerCard.tsx
dashboard/src/components/scheduler/: SchedulerPage.tsx
dashboard/src/components/sessions/: NewSessionDialog.tsx
dashboard/src/components/tasks/: NewTaskDialog.tsx  TaskCard.tsx  TasksPage.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown.tsx  input.tsx  label.tsx  segmented-control.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx
dashboard/src/components/viewer/: CodeBlock.tsx  EventRow.tsx  EventStream.tsx  InputBar.tsx  SessionViewer.tsx  StatsPanel.tsx
dashboard/src/hooks/: useKeyboard.ts  useLiveDuration.ts  useSSE.ts  useToast.ts  useWebSocket.ts
dashboard/src/lib/: utils.ts  ws.ts
dashboard/src/store/: sessions.ts
docker/: Dockerfile.base  Dockerfile.node  Dockerfile.python  Dockerfile.rust
docker/profiles/: base.toml  python.toml  rust.toml  web.toml
scripts/: build-images.sh
server/: Cargo.toml
server/src/: cleanup.rs  client_ws.rs  dashboard_api.rs  dashboard_ws.rs  main.rs  ntfy.rs  persist.rs  protocol.rs  provider.rs  state.rs  telegram.rs
shared/src/: lib.rs
vm-agent/src/: main.rs
