[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/client",
    "crates/shared",
    "crates/ndjson",
    "crates/events",
    "crates/containers",
    "crates/orchestrator-llm",
    "crates/backend-traits",
    "crates/backend-telegram",
    "crates/backend-discord",
    "crates/backend-web",
    "crates/backend-stdio",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6"
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
