[package]
name = "claude-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-server"
path = "src/main.rs"

[dependencies]
claude-shared = { path = "../shared" }
actix-web     = "4"
actix-ws      = "0.3"
actix-rt      = "2"
actix-files   = "0.6"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util  = "0.3"
anyhow        = "1"
async-trait   = "0.1"
bytes         = "1"
reqwest       = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
teloxide      = { version = "0.13", features = ["macros"] }
base64        = "0.22"
toml          = "0.8"
