[package]
name = "backend-web"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-events      = { path = "../events" }
claude-containers  = { path = "../containers" }
backend-traits     = { path = "../backend-traits" }
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
thiserror      = "2"
tracing        = "0.1"
async-trait    = "0.1"
axum           = { version = "0.7", features = ["ws"] }
tower-http     = { version = "0.5", features = ["cors"] }
futures-util   = "0.3"
