[package]
name = "claude-containers"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-ndjson = { path = "../ndjson", features = ["bollard"] }
tar           = "0.4"
tokio-util    = { version = "0.7", features = ["io"] }
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
thiserror     = "2"
tracing       = "0.1"
chrono        = { version = "0.4", features = ["serde"] }
uuid          = { version = "1", features = ["v4", "serde"] }
bollard       = "0.18"
toml          = "0.8"
dirs          = "5"
futures-util  = "0.3"
bytes         = "1"
