[package]
name = "claude-orchestrator-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-events = { path = "../events" }
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
thiserror     = "2"
tracing       = "0.1"
reqwest       = { version = "0.12", features = ["json"] }
async-trait   = "0.1"
