[package]
name = "vm-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vm-agent"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
vsock      = "0.5"
libc       = "0.2"

# Compile as a tiny static binary for Alpine (musl).
# Build with: cargo build --release --target x86_64-unknown-linux-musl -p vm-agent
[profile.release]
opt-level  = "z"
lto        = true
codegen-units = 1
panic      = "abort"
strip      = true
